# dontpanic

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README  Readme.md
src/: CMakeLists.txt  action.cpp  action_template.cpp  defines.hpp  dont_panic_core.cpp  dont_panic_core.hpp  dont_panik_part_core.cpp  dont_panik_part_core.hpp  dontpanic.cpp  dontpanic.desktop  dontpanic.h  dontpanic_part.cpp  dontpanic_part.h  dontpanic_part.rc  dontpanic_shell.rc  dontpanik.cpp  dontpanik.desktop  dontpanik_part.cpp  dontpanik_part.rc  main.cpp  project.cpp  project.hpp  task.cpp  task.hpp
src/akonadi_agent/: CMakeLists.txt  dontpanicresource.cpp  dontpanicresource.desktop  dontpanicresource.h
src/cmake/modules/: CheckBoostInstallation.cmake  Findlibuuid.cmake  Qt4Support.cmake  Qt5Support.cmake
src/debian/: README.Debian  README.source  changelog  control  copyright  dontpanic-common.install  dontpanic-i18n.install  dontpanic.install  dontpanic.substvars  dontpanik.install  dontpanikpart.install  kontact-plugin-dontpanik.install  libdontpanic.install  libdontpanicclient.install  libdontpanicclient.substvars  plasma-dataengine-dontpanic.install  plasma-widget-dontpanic.install  rules
src/dontpanic/: Application.cpp  Application.hpp  CMakeLists.txt  DBus.cpp  DataStore.cpp  DataStore.hpp  PersistanceBackend.cpp  PersistanceBackend.hpp  PersistanceBackendDBusWrapper.cpp  PersistanceBackendDBusWrapper.hpp  PersistenceBackend.cpp  PersistenceBackend.hpp  PersistenceBackendDBusWrapper.cpp  PersistenceBackendDBusWrapper.hpp  Sqlite.cpp  Sqlite.hpp  action_template.hpp  actiontemplatemanager.cpp  actiontemplatemanager.h  application.cpp  application.hpp  context.cpp  context.h  data_store.cpp  data_store.hpp  dbus.cpp  dbus.hpp  dbus_test.py  dontpanic.cpp  main.cpp  org.dontpanic.service.in  persistencebackend.cpp  persistencebackend.hpp  persistencebackenddbuswrapper.cpp  persistencebackenddbuswrapper.hpp  plannedworkingtimemanager.cpp  plannedworkingtimemanager.h  projectmanager.cpp  projectmanager.h  reportmanager.cpp  (+7 more)
src/dontpanic/core/: CMakeLists.txt  actiontemplatemanager.cpp  actiontemplatemanager.h  application.cpp  application.hpp  context.cpp  dbus.cpp  main.cpp  persistencebackend.cpp  persistencebackend.hpp  plannedworkingtimemanager.cpp  plannedworkingtimemanager.h  projectmanager.cpp  taskmanager.cpp  timetracker.cpp
src/dontpanic/interfaces/: org.dontpanic.Persistence.xml
src/dontpanic/persistance/: Sqlite.cpp  Sqlite.hpp  execute_query.hpp
src/dontpanic/persistence/: Sqlite.cpp  Sqlite.hpp  execute_query.hpp  sqlite.cpp  sqlite.hpp
src/dontpanic/reports/: cfreport.cpp  cfreport.h  plannedworkingtime.cpp  plannedworkingtime.h  reportgenerator.cpp
src/dontpanic_app/: CMakeLists.txt
src/dontpanic_part/: CMakeLists.txt  dontpanic_part.desktop  dontpanic_part.h
src/dontpaniclib/: action.hpp
src/dontpanicpart/: dontpanic_part.cpp  dontpanic_part.h
src/dontpanicshell/: dontpanic.h
src/dontpanik/: CMakeLists.txt  Messages.sh  dont_panik_part_core.cpp  dont_panik_part_core.hpp  dontpanik.cpp  dontpanik.hpp  dontpanik_part.cpp  dontpanik_part.desktop  dontpanik_part.hpp  dontpanik_part.rc  dontpanik_shell.rc  kactionstable.cpp  kactionstable.h  kactionstablemodel.cpp  kactionstablemodel.h  kdayview.cpp  kmainwidget.cpp  kmainwidget.h  kprojectsdialog.cpp  kprojectsdialog.h  kprojectstable.cpp  kprojectstable.h  kprojectstablemodel.cpp  kprojectstablemodel.h  kworktypesdialog.cpp  kworktypestable.cpp  kworktypestable.h  kworktypestablemodel.h  main.cpp
src/dontpanik/kontact_dontpanik_plugin/: CMakeLists.txt  dontpanik_plugin.cpp  dontpanik_plugin.desktop  dontpanik_plugin.h
src/dontpanik/kpart/: CMakeLists.txt  config.h.cmake  dontpanik_part.cpp  dontpanik_part.desktop  dontpanik_part.hpp  dontpanik_part.rc  dontpanikpart.notifyrc
src/dontpanik/shell/: CMakeLists.txt  dontpanik.cpp  dontpanik.desktop  dontpanik.hpp  dontpanik_shell.rc  main.cpp
src/dontpanik/ui/: kdayview.ui  kmainwidget.ui  kmainwindow.ui  kprojectsdialog.ui  kworktypesdialog.ui
src/i18n/: CMakeLists.txt  extract-messages.sh
src/icons/: CMakeLists.txt
src/include/dontpanik/: defines.hpp
src/include/libdontpanic/: action.hpp  actiontemplate.hpp  collaborationtype.hpp  dbus.hpp  defines.hpp  dp_export.hpp  durationformatter.h  enum.h  leavetype.hpp  project.hpp  report.h  reportdata.h  reportdatafilter.h  reportdatafiltertype.h  reportgroupingtimeinterval.h  reporttype.h  success.hpp  task.hpp  time.hpp  timerange.h  timerangeformatter.h  uuid.h  worktimeperday.h
src/include/libdontpanic_client/: actionscache.h  actiontemplatemanager.h  plannedworkingtimemanager.h  projectmanager.h  reportmanager.h  taskmanager.h  timetracker.h
src/interfaces/: org.dontpanic.ActionTemplateManager.xml  org.dontpanic.PlannedWorkingTimeManager.xml  org.dontpanic.ProjectManager.xml  org.dontpanic.ReportManager.xml  org.dontpanic.TaskManager.xml  org.dontpanic.TimeTracker.xml
src/libdontpanic/: Action.cpp  Action.hpp  ActionTemplate.cpp  ActionTemplate.hpp  CMakeLists.txt  CollaborationType.cpp  DBus.cpp  DBus.hpp  LeaveType.cpp  Project.cpp  Project.hpp  Task.cpp  Task.hpp  action.cpp  action.hpp  action_template.cpp  action_template.hpp  actiontemplate.cpp  actiontemplate.hpp  collaboration_type.cpp  collaboration_type.hpp  collaborationtype.cpp  collaborationtype.hpp  dbus.cpp  dbus.hpp  enum.h  leave_type.cpp  leave_type.hpp  leavetype.cpp  leavetype.hpp  project.cpp  project.hpp  success.hpp  task.cpp  task.hpp
src/libdontpanic/dbus_support/: Project.cpp  Project.hpp  Task.cpp  Task.hpp  common.h  project.cpp  project.hpp  quuid.cpp  quuid.h  task.cpp  task.hpp
src/libs/: CMakeLists.txt
src/libs/libdontpanic/: CMakeLists.txt  action.cpp  actiontemplate.cpp  collaborationtype.cpp  config.h.in  dbus.cpp  leavetype.cpp  (+15 more)
src/plasma/: CMakeLists.txt
src/test/: CMakeLists.txt  dummypersistence.cpp  dummypersistence.hpp  durationformattertest.cpp  durationformattertest.h  reportgeneratortest.cpp  reportgeneratortest.h
src/tiptools/: CMakeLists.txt  application.cpp  application.h  main.cpp
(+263 files in other folders)
