project(dontpanic)
set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake/modules)
include(Qt4Support)
include(AssertOutOfSourceBuild)
find_package(KDE4 REQUIRED)
include (KDE4Defaults)

set(DBUS_INTERFACES_PATH ${CMAKE_SOURCE_DIR}/src/interfaces)
option(DP_USE_LIBUUID "Use libuuid instead of Qt's default Uuid creator(recommended at least on linux systems!)" ON)
option(DP_BUILD_KONTACT_PLUGIN "Building a kontact plugin. This will require the kdepim-dev files." ON)
option(DP_BUILD_PLASMA_COMPONENTS "Building a plasmaengine and a corresponding plasmoid." ON)
option(DP_INSTALL_SYSTEM_FILES "Allows disabling the installation of files which needs root access and are rarely changed" ON)

if(DP_USE_LIBUUID)
  find_package(libuuid)
else(DP_USE_LIBUUID)
  #SET(libuuid_LIB "")
endif(DP_USE_LIBUUID)
include_directories( ${KDE4_INCLUDES} ${QT_INCLUDES} )
include_directories(${CMAKE_SOURCE_DIR}/src/include)

add_subdirectory( doc )
add_subdirectory( src )
add_subdirectory( icons )
add_subdirectory( i18n )

message(STATUS "************************************************************")
message(STATUS "Configuration Summary:")
if(DP_USE_LIBUUID)
  message(STATUS "Using libuuid instead of Qt's default Uuid creator.")
else(DP_USE_LIBUUID)
  message(STATUS "WARNING: Using Qt's default Uuid creator.")
  message(STATUS "On non Windows systems this is not guaranteed to create unique IDs.")
  message(STATUS "Please consider setting DP_USE_LIBUUID to ON in order to use libuuid instead!")
endif(DP_USE_LIBUUID)
if(DP_BUILD_KONTACT_PLUGIN)
  message(STATUS "Building the KDE Kontact plugin")
else(DP_BUILD_KONTACT_PLUGIN)
  message(STATUS "NOT building the KDE Kontact plugin.")
  message(STATUS "Please set DP_BUILD_KONTACT_PLUGIN to ON if you'd like to change this")
endif(DP_BUILD_KONTACT_PLUGIN)
if(DP_BUILD_PLASMA_COMPONENTS)
  message(STATUS "Building the KDE Plasma components")
else(DP_BUILD_PLASMA_COMPONENTS)
  message(STATUS "NOT building the KDE Plasma components.")
  message(STATUS "Please set DP_BUILD_PLASMA_COMPONENTS to ON if you'd like to change this")
endif(DP_BUILD_PLASMA_COMPONENTS)
message(STATUS "************************************************************")
