set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/modules/")

add_subdirectory(libs)
add_subdirectory(dontpanic)
if(DP_BUILD_PLASMA_COMPONENT)
 add_subdirectory(plasma)
endif (DP_BUILD_PLASMA_COMPONENT)
if(DP_BUILD_AKONADI_AGENT)
 add_subdirectory(akonadi_agent)
endif (DP_BUILD_AKONADI_AGENT)
add_subdirectory(dontpanik)
add_subdirectory(tiptools)
