project(dontpanic)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
cmake_minimum_required(VERSION 2.8.12)
set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake/modules)
include(Qt5Support)
include(AssertOutOfSourceBuild)
find_package(ECM REQUIRED NO_MODULE)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${ECM_MODULE_PATH})

set(DBUS_INTERFACES_PATH ${CMAKE_SOURCE_DIR}/interfaces)
option(DP_USE_LIBUUID "Use libuuid instead of Qt's default Uuid creator(recommended at least on linux systems!)" ON)
option(DP_BUILD_KONTACT_PLUGIN "Building a kontact plugin. This will require the kdepim-dev files." OFF)
option(DP_BUILD_PLASMA_COMPONENTS "Building a plasmaengine and a corresponding plasmoid." ON)
option(DP_KMAIL_INTEGRATION "Building with KMail integration to enable sending report files by mail." ON)


find_package(Qt5 REQUIRED COMPONENTS DBus Sql)
find_package(KF5 REQUIRED COMPONENTS Config CoreAddons I18n IconThemes Notifications Parts WidgetsAddons XmlGui)
if(DP_BUILD_KONTACT_PLUGIN)
find_package(KF5 REQUIRED COMPONENTS KontactInterface)
endif(DP_BUILD_KONTACT_PLUGIN)
include(KDEInstallDirs)
include(KDECompilerSettings)
include(KDECMakeSettings)
include(FeatureSummary)
include(ECMInstallIcons)
set(KDE_INSTALL_USE_QT_SYS_PATHS ON)

if(DP_USE_LIBUUID)
  find_package(libuuid)
else(DP_USE_LIBUUID)
  #SET(libuuid_LIB "")
endif(DP_USE_LIBUUID)
include_directories(${CMAKE_SOURCE_DIR}/include)
set(CMAKE_INCLUDE_CURRENT_DIR ON)

#add_subdirectory( doc )
#add_subdirectory( src )
add_subdirectory( icons )
add_subdirectory( i18n )

message(STATUS "************************************************************")
message(STATUS "Configuration Summary:")
if(DP_USE_LIBUUID)
  message(STATUS "Using libuuid instead of Qt's default Uuid creator.")
else(DP_USE_LIBUUID)
  message(STATUS "WARNING: Using Qt's default Uuid creator.")
  message(STATUS "On non Windows systems this is not guaranteed to create unique IDs.")
  message(STATUS "Please consider setting DP_USE_LIBUUID to ON in order to use libuuid instead!")
endif(DP_USE_LIBUUID)
if(DP_BUILD_KONTACT_PLUGIN)
  message(STATUS "Building the KDE Kontact plugin")
else(DP_BUILD_KONTACT_PLUGIN)
  message(STATUS "NOT building the KDE Kontact plugin.")
  message(STATUS "Please set DP_BUILD_KONTACT_PLUGIN to ON if you'd like to change this")
endif(DP_BUILD_KONTACT_PLUGIN)
#if(DP_KMAIL_INTEGRATION)
#  message(STATUS "Building with KMail integration")
#else(DP_KMAIL_INTEGRATION)
#  message(STATUS "NOT Building with KMail integration.")
#  message(STATUS "Please set DP_KMAIL_INTEGRATION to ON if you'd like to change this")
#endif(DP_KMAIL_INTEGRATION)
if(DP_BUILD_PLASMA_COMPONENTS)
  message(STATUS "Building the KDE Plasma components")
else(DP_BUILD_PLASMA_COMPONENTS)
  message(STATUS "NOT building the KDE Plasma components.")
  message(STATUS "Please set DP_BUILD_PLASMA_COMPONENTS to ON if you'd like to change this")
endif(DP_BUILD_PLASMA_COMPONENTS)
message(STATUS "************************************************************")
feature_summary(WHAT ALL)

add_subdirectory(libs)
add_subdirectory(dontpanic)
if(DP_BUILD_PLASMA_COMPONENTS)
 add_subdirectory(plasma)
endif (DP_BUILD_PLASMA_COMPONENTS)
#if(DP_BUILD_AKONADI_AGENT)
# add_subdirectory(akonadi_agent)
#endif (DP_BUILD_AKONADI_AGENT)
add_subdirectory(dontpanik)
#add_subdirectory(tiptools)
#add_subdirectory(test)
